Over for artists

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -120,7 +120,7 @@ article
 
 			.view-artist
 				opacity: 1
-				pointer-events: initial
+				//pointer-events: initial
 
 			&:before
 				background-color: rgba(255, 255, 255, 0)
