--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -192,7 +192,7 @@ article
 	position: relative
 
 	.exhibition-content
-		background: white
+		background: rgba(255, 255, 255, 0.8)
 		height: 100%
 		padding: 1em
 		text-align: center
