--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -316,7 +316,7 @@ article {
   padding: 1em;
   position: relative; }
   .exhibition-current .exhibition-content {
-    background: white;
+    background: rgba(255, 255, 255, 0.8);
     height: 100%;
     padding: 1em;
     text-align: center; }
