--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -191,11 +191,21 @@ article
 	padding: 1em
 	position: relative
 
+	.exhibition-artist
+		font-size: 32px
+		font-weight: bold
+		margin: 0
+		text-transform: uppercase
+
 	.exhibition-content
 		background: rgba(255, 255, 255, 0.8)
 		height: 100%
-		padding: 1em
+		padding: 7em 1em
 		text-align: center
+
+		.exhibition-type:after
+			bottom: -9.5em
+			height: 9em
 
 	.exhibition-detail
 		font-size: 20px
@@ -204,18 +214,24 @@ article
 		margin: 0 auto 1em auto
 
 	.exhibition-text
-		font-size: 12px
+		font-size: 18px
+		font-weight: bold
 		margin: 0 auto
+		text-transform: uppercase
 
 		p
 			margin-bottom: 1em
 			margin-top: 0
 
+			&:last-of-type
+				margin-bottom: 0
+
 	.exhibition-title
-		font-size: 32px
+		font-size: 24px
 		font-weight: bold
 		line-height: 1em
-		margin: 1em auto 0 auto
+		margin: 0.5em auto
+		text-transform: uppercase
 
 	.read-more
 		display: inline-block
@@ -231,11 +247,25 @@ article
 		right: -0.5em
 		top: -1em
 
+.exhibition-link
+	display: block
+	height: 100%
+	left: 0
+	position: absolute
+	top: 0
+	width: 100%
+
 .exhibition-past
 	display: inline-block
 	margin: 1em 0
+	position: relative
 	text-align: left
-	width: 280px
+	width: 300px
+
+	.exhibition-artist
+		font-size: 20px
+		font-weight: bold
+		margin: 0
 
 	.exhibition-detail
 		font-size: 14px
