--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -315,27 +315,40 @@ article {
   margin: 2em auto 4em auto;
   padding: 1em;
   position: relative; }
+  .exhibition-current .exhibition-artist {
+    font-size: 32px;
+    font-weight: bold;
+    margin: 0;
+    text-transform: uppercase; }
   .exhibition-current .exhibition-content {
     background: rgba(255, 255, 255, 0.8);
     height: 100%;
-    padding: 1em;
+    padding: 7em 1em;
     text-align: center; }
+    .exhibition-current .exhibition-content .exhibition-type:after {
+      bottom: -9.5em;
+      height: 9em; }
   .exhibition-current .exhibition-detail {
     font-size: 20px;
     font-weight: bold;
     line-height: 1em;
     margin: 0 auto 1em auto; }
   .exhibition-current .exhibition-text {
-    font-size: 12px;
-    margin: 0 auto; }
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0 auto;
+    text-transform: uppercase; }
     .exhibition-current .exhibition-text p {
       margin-bottom: 1em;
       margin-top: 0; }
+      .exhibition-current .exhibition-text p:last-of-type {
+        margin-bottom: 0; }
   .exhibition-current .exhibition-title {
-    font-size: 32px;
+    font-size: 24px;
     font-weight: bold;
     line-height: 1em;
-    margin: 1em auto 0 auto; }
+    margin: 0.5em auto;
+    text-transform: uppercase; }
   .exhibition-current .read-more {
     display: inline-block; }
 
@@ -349,11 +362,24 @@ article {
     right: -0.5em;
     top: -1em; }
 
+.exhibition-link {
+  display: block;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%; }
+
 .exhibition-past {
   display: inline-block;
   margin: 1em 0;
+  position: relative;
   text-align: left;
-  width: 280px; }
+  width: 300px; }
+  .exhibition-past .exhibition-artist {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 0; }
   .exhibition-past .exhibition-detail {
     font-size: 14px;
     font-weight: normal;
