--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -30,16 +30,18 @@ article
 			margin-top: 0.1em
 
 .announcements
-	font-size: 15px
-	font-weight: 300
+	font-size: 13px
+	font-weight: 500
+	letter-spacing: 0.2em
 	margin: 0 auto
 	text-align: center
+	text-transform: uppercase
 
 	span
 		display: inline-block
 		border: 3px solid
 		line-height: 1em
-		padding: 0.5em 0.7em
+		padding: 0.7em 1em
 
 .arrow
 	margin-top: 2em
@@ -61,10 +63,12 @@ article
 			border-bottom: 2px solid transparent
 			color: black
 			display: inline-block
-			font-size: 17px
+			font-size: 12px
 			font-weight: 500
+			letter-spacing: 0.1em
 			padding-bottom: 0.25em
 			text-decoration: none
+			text-transform: uppercase
 			transition: border-color 0.3s
 
 			&:hover
@@ -366,6 +370,7 @@ article
 
 	.menu
 		font-weight: bold
+		text-transform: uppercase
 
 	.social-networks
 		display: none
@@ -608,12 +613,14 @@ article
 .picture-credits
 	bottom: 0
 	display: none
-	font-size: 10px
+	font-size: 9px
+	letter-spacing: 0.2em
 	line-height: 1em
 	margin-right: 0.5em
 	position: absolute
 	right: 0
 	text-align: center
+	text-transform: uppercase
 	top: 0
 	transform: rotate(180deg)
 	-webkit-writing-mode: vertical-lr
@@ -997,7 +1004,7 @@ article
 	.artists
 		li
 			display: inline-block
-			width: 49%
+			width: 45%
 
 		&.list
 			width: 60%
@@ -1136,7 +1143,7 @@ article
 	.artists
 		&.thumb
 			li
-				width: 250
+				width: 250px
 
 	.events
 		display: block
