--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -157,6 +157,14 @@ article
 	position: absolute
 	width: 120px
 
+	a
+		border-bottom: 2px solid transparent
+		padding-bottom: 1px
+
+		&:hover
+			border-bottom: 2px solid
+			color: initial
+
 	h3,
 	p,
 	ul
@@ -385,6 +393,7 @@ article
 	display: none
 	position: fixed
 	text-align: center
+	text-transform: uppercase
 	top: 0
 	-webkit-writing-mode: vertical-lr
 	-moz-writing-mode: vertical-lr
@@ -702,7 +711,8 @@ article
 		&.exit-fs
 			display: none
 			font-size: x-small
-			font-weight: 500
+			font-weight: bold
+			letter-spacing: 0.1em
 			text-transform: uppercase
 
 			span
@@ -740,7 +750,7 @@ article
 		left: -1em
 		position: absolute
 		right: -1em
-		top: 45%
+		top: 42.5%
 		z-index: 2
 
 		div
@@ -909,6 +919,8 @@ article
 	width: 100%
 
 #the-gallery
+	text-shadow: 1px 1px white
+
 	.contact-info
 		margin: 0 auto
 		text-align: center
@@ -1034,6 +1046,9 @@ article
 					bottom: 2.5em
 					height: 2em
 
+	.events
+		left: 5em
+
 	.exhibition-current
 		.exhibition-detail
 			width: 45%
@@ -1101,7 +1116,7 @@ article
 			display: none !important
 
 	.newsletter
-		padding: 6em 1em 1em 1em
+		padding: 16em 1em 1em 1em
 
 		.newsletter-title
 			font-size: 72px
