Hover effect for current exhibition

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -214,6 +214,7 @@ article
 		height: 100%
 		padding: 7em 1em
 		text-align: center
+		transition: 0.3s all
 
 		.exhibition-type:after
 			bottom: -9.5em
@@ -247,6 +248,9 @@ article
 
 	.read-more
 		display: inline-block
+
+	&:hover .exhibition-content
+		background-color: white
 
 .exhibition-group
 	display: none
