--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -255,6 +255,8 @@ article
 .exhibition-group
 	display: none
 	position: relative
+	//opacity: 0
+	//transition: 0.5s all
 
 	.exhibition-close
 		font-weight: bold
@@ -262,6 +264,9 @@ article
 		position: absolute
 		right: -0.5em
 		top: -1em
+
+	/*&.visible
+		opacity: 1*/
 
 .exhibition-link
 	display: block
@@ -292,17 +297,34 @@ article
 		background-position: center
 		background-size: cover
 		height: 180px
+		padding: 1em
 
 		a
 			display: block
 			height: 100%
 			width: 100%
 
+		& > div
+			background-color: rgba(255, 255, 255, 0.7)
+			height: 100%
+			line-height: 142px
+			opacity: 0
+			text-align: center
+			transition: 0.3s all
+
+			.read-more
+				display: inline
+				padding: 0.5em 0.75em
+				pointer-events: none
+
 	.exhibition-title
 		font-size: 18px
 		font-weight: bold
 		margin: 0
 		margin-top: 0.25em
+
+	&:hover .exhibition-img > div
+		opacity: 1
 
 .exhibition-type
 	font-size: 12px
