Markup and styles for exhibition detail

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -11,11 +11,23 @@ article
 		.post-actions
 			top: 0
 
+		.post-info
+			font-weight: bold
+			margin: 0.5em auto 2em auto
+			text-align: center
+			text-transform: uppercase
+
 		.post-title
-			margin-bottom: 0
-			margin-left: auto
-			margin-right: auto
-			max-width: 470px
+			margin: 0
+			text-transform: uppercase
+
+		.post-subtitle
+			font-size: 28px
+			font-weight: 500
+			letter-spacing: 0.1em
+			margin: 0.5em auto
+			max-width: 400px
+			text-transform: uppercase
 
 	&.post
 		margin-bottom: 1em
@@ -619,7 +631,7 @@ article
 				color: black
 
 .past-exhibitions
-	margin-top: 8em
+	margin-top: 10em
 	position: relative
 	text-align: center
 
