--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -157,11 +157,21 @@ article {
       text-shadow: 1px 1px white; }
   article.exhibition .post-actions {
     top: 0; }
+  article.exhibition .post-info {
+    font-weight: bold;
+    margin: 0.5em auto 2em auto;
+    text-align: center;
+    text-transform: uppercase; }
   article.exhibition .post-title {
-    margin-bottom: 0;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 470px; }
+    margin: 0;
+    text-transform: uppercase; }
+  article.exhibition .post-subtitle {
+    font-size: 28px;
+    font-weight: 500;
+    letter-spacing: 0.1em;
+    margin: 0.5em auto;
+    max-width: 400px;
+    text-transform: uppercase; }
   article.post {
     margin-bottom: 1em; }
     article.post .post-actions {
@@ -706,7 +716,7 @@ article {
         color: black; }
 
 .past-exhibitions {
-  margin-top: 8em;
+  margin-top: 10em;
   position: relative;
   text-align: center; }
   .past-exhibitions .exhibition-type {
