--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -12,7 +12,7 @@ article
 			top: 0
 
 		.post-info
-			font-weight: bold
+			font-weight: 500
 			margin: 0.5em auto 2em auto
 			text-align: center
 			text-transform: uppercase
