--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -158,7 +158,7 @@ article {
   article.exhibition .post-actions {
     top: 0; }
   article.exhibition .post-info {
-    font-weight: bold;
+    font-weight: 500;
     margin: 0.5em auto 2em auto;
     text-align: center;
     text-transform: uppercase; }
@@ -1270,7 +1270,7 @@ article {
 article.artist.sticky {
   margin-top: 5em; }
   article.artist.sticky .post-content {
-    margin-top: 0; }
+    margin-top: 74px; }
   article.artist.sticky .post-title {
     left: 0;
     position: fixed;
