--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -172,6 +172,7 @@ article
 	a
 		border-bottom: 2px solid transparent
 		padding-bottom: 1px
+		transition: all 0.3s
 
 		&:hover
 			border-bottom: 2px solid
