--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -298,7 +298,9 @@ article {
   width: 120px; }
   .events a {
     border-bottom: 2px solid transparent;
-    padding-bottom: 1px; }
+    padding-bottom: 1px;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s; }
     .events a:hover {
       border-bottom: 2px solid;
       color: initial; }
