Title scroll interaction adjusted

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -2,9 +2,13 @@ article
 	padding: 0 1em
 
 	&.artist
-		margin-top: 2.5em
+		margin-top: 5em
+
+		.post-content
+			margin-top: 0
 
 		.post-title
+			margin: 0.5em auto
 			text-shadow: 1px 1px white
 
 	&.exhibition
@@ -592,6 +596,9 @@ article
 		width: 100%
 		z-index: 1
 
+.owl-controls
+	display: none
+
 .page-numbers
 	list-style-type: none
 	margin: 0 auto
@@ -710,7 +717,7 @@ article
 
 .post-content
 	position: relative
-	transition: all 0.3s
+	//transition: all 0.3s
 
 	h2
 		font-size: 20px
