--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -152,8 +152,11 @@ main {
 article {
   padding: 0 1em; }
   article.artist {
-    margin-top: 2.5em; }
+    margin-top: 5em; }
+    article.artist .post-content {
+      margin-top: 0; }
     article.artist .post-title {
+      margin: 0.5em auto;
       text-shadow: 1px 1px white; }
   article.exhibition .post-actions {
     top: 0; }
@@ -684,6 +687,9 @@ article {
     width: 100%;
     z-index: 1; }
 
+.owl-controls {
+  display: none; }
+
 .page-numbers {
   list-style-type: none;
   margin: 0 auto;
@@ -791,9 +797,7 @@ article {
     font-weight: 500; }
 
 .post-content {
-  position: relative;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s; }
+  position: relative; }
   .post-content h2 {
     font-size: 20px;
     font-weight: bold;
@@ -1269,16 +1273,14 @@ article {
 
   .the-gallery-pic {
     display: block; } }
-article.artist.sticky {
-  margin-top: 5em; }
-  article.artist.sticky .post-content {
-    margin-top: 74px; }
-  article.artist.sticky .post-title {
-    left: 0;
-    position: fixed;
-    right: 0;
-    top: 2.5em;
-    z-index: 2; }
+article.artist.sticky .post-content {
+  margin-top: 86px; }
+article.artist.sticky .post-title {
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 2.5em;
+  z-index: 2; }
 
 .post-gallery::-webkit-full-screen {
   background-color: white;
