Removed duplicated artist

--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -1015,7 +1015,7 @@ article
 			width: 0
 
 	.contact-info-city
-		margin: 2em auto
+		margin: 0 auto 2em auto
 		text-shadow: 1px 1px white
 
 	& > p
@@ -1086,11 +1086,11 @@ article
 			width: 45%
 
 		&.list
-			width: 60%
+			width: 50%
 
 			li
 				/*padding: 0 1em*/
-				padding-left: 15%
+				padding-left: 12%
 
 				/*&:nth-of-type(odd)
 					text-align: right*/
