letter-spacing for menu items

--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -518,6 +518,7 @@ article {
   z-index: 999999999999999; }
   .navigation-menu .menu {
     font-weight: bold;
+    letter-spacing: 0.1em;
     text-transform: uppercase; }
   .navigation-menu .social-networks {
     display: none;
