--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -46,7 +46,7 @@ article
 			margin-top: 0.1em
 
 .announcements
-	font-size: 12px
+	font-size: 11px
 	font-weight: 500
 	letter-spacing: 0.2em
 	margin: 0 auto
@@ -777,8 +777,9 @@ article
 			box-shadow: 0 0 0 1px black
 			color: white
 			display: none
+			font-size: 12px
 			opacity: 0
-			padding: 0.3em
+			padding: 0.4em
 			transition: 0.3s all
 
 			&:hover
@@ -986,18 +987,18 @@ article
 	.contact-info
 		margin: 0 auto
 		text-align: center
-		text-shadow: 1px 1px white
+		//text-shadow: 1px 1px white
 
 	.contact-city-details
 		font-size: 18px
 		font-weight: bold
 		margin: 0
-		text-shadow: 1px 1px white
+		//text-shadow: 1px 1px white
 
 	.contact-city-mail
 		font-size: 14px
 		font-weight: bold
-		text-shadow: 1px 1px white
+		//text-shadow: 1px 1px white
 
 	.contact-city-name
 		font-size: 12px
@@ -1005,7 +1006,7 @@ article
 		letter-spacing: 0.5em
 		margin-bottom: 0
 		text-transform: uppercase
-		text-shadow: 1px 1px white
+		//text-shadow: 1px 1px white
 
 		&:after
 			border: 1px solid
@@ -1017,7 +1018,7 @@ article
 
 	.contact-info-city
 		margin: 0 auto 2em auto
-		text-shadow: 1px 1px white
+		//text-shadow: 1px 1px white
 
 	& > p
 		font-family: 'suisse_works'
@@ -1027,7 +1028,7 @@ article
 		margin: 1em auto
 		max-width: 500px
 		text-align: center
-		text-shadow: 1px 1px white
+		//text-shadow: 1px 1px white
 
 @media screen and (max-width: $tablet)
 	.navigation-menu
@@ -1178,7 +1179,7 @@ article
 				color: black
 
 		.menu li
-			margin-left: 1em
+			margin-left: 2em
 
 		#hamburguer
 			display: none !important
