--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -447,8 +447,9 @@ article
 
 	a
 		color: rgba(0, 0, 0, 0.3)
-		font-size: 14px
-		font-weight: 500
+		font-size: 12px
+		font-weight: bold
+		letter-spacing: 0.2em
 
 		&:hover
 			color: black
