--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -555,9 +555,9 @@ article
 
 .news-item
 	background-repeat: no-repeat
-	background-size: auto 60%
+	background-size: auto 70%
 	box-sizing: border-box
-	margin: 2em auto 4em auto
+	margin: 2em auto 6em auto
 	max-width: 700px
 	padding: 1em
 	position: relative
@@ -816,7 +816,7 @@ article
 		left: -1em
 		position: absolute
 		right: -1em
-		top: 42.5%
+		top: 44%
 		z-index: 2
 
 		div
@@ -1089,7 +1089,8 @@ article
 			width: 45%
 
 		&.list
-			width: 50%
+			margin-top: 3em
+			width: 55%
 
 			li
 				/*padding: 0 1em*/
