--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -1,3 +1,4 @@
+@import url(normalize.css);
 @import url(fontface.css);
 @import url(owl.carousel.min.css);
 @import url(owl.theme.default.min.css);
