--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -117,10 +117,11 @@ article
 			display: none
 
 		.view-artist
-			left: calc(50% - 42.5px)
+			display: inline-block
+			//left: calc(50% - 42.5px)
 			opacity: 0
 			pointer-events: none
-			position: absolute
+			//position: absolute
 
 			&:before
 				border: 1px solid black
@@ -129,6 +130,12 @@ article
 				height: 4em
 				left: calc(50% - 1px)
 				position: absolute
+
+		.view-artist-cont
+			bottom: 0.5em
+			left: 0
+			position: absolute
+			right: 0
 
 		&:before
 			background-color: rgba(255, 255, 255, 0.75)
