--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -708,17 +708,19 @@ article
 		width: 100px
 
 		[class^="icon-"]
+			background-color: black
 			border-radius: 50%
-			box-shadow: 0 0 0 1px transparent
+			box-shadow: 0 0 0 1px
+			color: white
 			display: inline-block
-			font-size: x-large
+			font-size: medium
+			padding: 0.5em
 			transition: all 0.3s
 
 		&:hover
 			[class^="icon-"]
-				background: black
-				box-shadow: 0 0 0 1px black
-				color: white
+				background-color: white
+				color: black
 
 	.post-attachment-text
 		font-size: 14px
@@ -767,17 +769,19 @@ article
 				vertical-align: middle
 
 			.icon-close
+				background-color: black
 				border-radius: 50%
-				box-shadow: 0 0 0 1px white
+				box-shadow: 0 0 0 1px black
+				color: white
 				display: inline-block
-				font-size: medium
+				font-size: xx-small
 				margin: 0 0.2em
+				padding: 0.5em
 				transition: 0.3s all
 
 			&:hover .icon-close
-				background-color: black
-				box-shadow: 0 0 0 1px black
-				color: white
+				background-color: white
+				color: black
 
 		&.icon-expand
 			background-color: black
@@ -955,14 +959,16 @@ article
 		padding: 0.25em
 
 		a
-			background-color: white
+			background-color: black
 			border-radius: 50%
-			box-shadow: 0 0 0 1px transparent
+			box-shadow: 0 0 0 1px black
+			color: white
+			font-size: medium
+			padding: 0.5em
 
 			&:hover
-				background-color: black
-				box-shadow: 0 0 0 1px black
-				color: white
+				background-color: white
+				color: black
 
 .the-gallery-pic
 	background-position: center
