--- a/wp-content/themes/mc2015/css/icomoon.css
+++ b/wp-content/themes/mc2015/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?f0tufa');
-	src:url('fonts/icomoon.eot?#iefixf0tufa') format('embedded-opentype'),
-		url('fonts/icomoon.woff?f0tufa') format('woff'),
-		url('fonts/icomoon.ttf?f0tufa') format('truetype'),
-		url('fonts/icomoon.svg?f0tufa#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?cpr6m0');
+	src:url('fonts/icomoon.eot?#iefixcpr6m0') format('embedded-opentype'),
+		url('fonts/icomoon.woff?cpr6m0') format('woff'),
+		url('fonts/icomoon.ttf?cpr6m0') format('truetype'),
+		url('fonts/icomoon.svg?cpr6m0#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -55,12 +55,6 @@
 }
 .icon-page-prev:before {
 	content: "\e60b";
-}
-.icon-page-prev-empty:before {
-	content: "\e611";
-}
-.icon-page-next-empty:before {
-	content: "\e612";
 }
 .icon-page-next:before {
 	content: "\e60c";
