--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -894,7 +894,8 @@ article {
     left: -1em;
     position: absolute;
     right: -1em;
-    top: 44%;
+    top: -webkit-calc(50% - 10px);
+    top: calc(50% - 10px);
     z-index: 2; }
     .post-gallery .gallery-controls div {
       cursor: pointer;
