--- a/wp-content/themes/mc2015/css/_state.sass
+++ b/wp-content/themes/mc2015/css/_state.sass
@@ -13,6 +13,7 @@ article.artist.sticky
 	+fullscreen()
 		background-color: white
 		border: 10px solid black
+		height: 100%
 		padding: 2em
 		width: 100%
 
