Fullscreen mixin addition

--- a/wp-content/themes/mc2015/css/_mixins.sass
+++ b/wp-content/themes/mc2015/css/_mixins.sass
@@ -3,6 +3,8 @@
 		@content
 	&::-moz-full-screen
 		@content
+	&::-ms-full-screen
+		@content
 	&:-webkit-full-screen
 		@content
 	&:-moz-full-screen
